--- a/package.json
+++ b/package.json
@@ -6,15 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ./ --ext js,jsx,ts,tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.7",
+    "@babel/core": "^7.16.7",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/css": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "graphql": "^16.2.0",
     "next": "12.0.1",
+    "next-transpile-modules": "^9.0.0",
+    "prettier": "^2.5.1",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-id-swiper": "^4.0.0",
+    "react-loadingg": "^1.7.2",
+    "safe-json-stringify": "^1.2.0",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
