--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "framer-motion": "^5.6.0",
     "graphql": "^16.2.0",
     "next": "12.0.1",
     "next-transpile-modules": "^9.0.0",
