--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^5.6.0",
     "graphql": "^16.2.0",
     "next": "12.0.1",
+    "next-pwa": "^5.4.4",
     "next-transpile-modules": "^9.0.0",
     "prettier": "^2.5.1",
     "prop-types": "^15.8.1",
